@@ -15,6 +15,9 @@ x.x.x (XX-XX-XXXX)
 
 - Implement `ClientSession.connector` readonly property
 
+- Implement `ClientSession.detach` method
+
+
 
 0.15.3 (04-22-2015)
 -------------------
